--- a/OAS.yml
+++ b/OAS.yml
@@ -7,4 +7,31 @@ servers:
   - url: https://localhost:8000
 
 paths:
-
+  /ping:
+      get:
+        responses:
+          200:
+            description: pong
+            content:
+              text/plain:
+                schema:
+                  type: string
+                  example: pong
+  /cars:
+      post:
+        requestBody:
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/"
+      responses:
+        201:
+          description: List of tasks created
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/
